--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
       <artifactId>aspectjweaver</artifactId>
       <version>1.8.6</version>
     </dependency>
+    <!-- Failed to load class "org.slf4j.impl.StaticLoggerBinder". -->
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>1.7.25</version>
+    </dependency>
     <!-- 
     Hibernate 등 ORM(Object Relational Mapping)은 
     SQL 등을 사용하는 데이터베이스의 액세스와 Java의 Objective 코드와 일관성을 위한 기술로 널리 사용되고 있다.
